// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form 1`] = `
<div
  className="row"
>
  <div
    className="be5-form companies_SelectCompany formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      SelectCompany
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div>
        <div
          className="property-set form-row"
        />
        <div
          className="formActions"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-12"
  />
</div>
`;

exports[`Form errorOnApply 1`] = `
<div
  className="row"
>
  <div
    className="be5-form testtable_TestOperation formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      Тестовая операция
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div>
        <div
          className="property-set form-row"
        />
        <div
          className="formActions"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-12"
  >
    <div
      className="errorPane"
    >
      <div
        className="errorPane__error"
      >
        <h1
          className="errorPane__title errorPane__title_500"
        >
          500
           - 
          Internal error occurred during operation testtable.TestOperation
        </h1>
        <br />
        <pre
          className="errorPane__code"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Be5Exception: Internal error occurred during operation... ",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form on MAIN_DOCUMENT 1`] = `
<div
  className="row"
>
  <div
    className="be5-form companies_SelectCompany formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      SelectCompany
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div>
        <div
          className="property-set form-row"
        />
        <div
          className="formActions"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
           
          <button
            className="btn btn-secondary back-action-btn"
            onClick={[Function]}
            type="button"
          >
            Back
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-12"
  />
</div>
`;

exports[`HorizontalForm 1`] = `
<div
  className="row"
>
  <div
    className="be5-form companies_SelectCompany formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      SelectCompany
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div>
        <div
          className="property-set form-row"
        />
        <div
          className="formActions form-row"
        >
          <div
            className="col-lg-9 offset-lg-3"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              title=""
              type="submit"
            >
              Submit
            </button>
             
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-12"
  />
</div>
`;

exports[`InlineMiniForm 1`] = `
<div
  className="be5-form companies_SelectCompany form-inline-mini"
>
  <form
    className="form-inline"
    onSubmit={[Function]}
  >
    <label
      className="mr-sm-2"
    >
      <strong>
        SelectCompany
      </strong>
    </label>
    <div
      className="property form-group required mr-sm-2"
    >
      <label
        className="form-control-label mr-sm-2"
        htmlFor="companyIDPropertyInput"
      >
        companyID
      </label>
      <input
        className="property-input form-control"
        id="companyIDPropertyInput"
        maxLength={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onInput={[Function]}
        onInvalid={[Function]}
        pattern={undefined}
        placeholder={undefined}
        required={true}
        size={undefined}
        type="text"
        value=""
      />
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title=""
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`ModalForm 1`] = `
<div
  className="be5-form companies_SelectCompany"
>
  <div
    className="modal-header"
  >
    <h5
      className="modal-title"
    >
      SelectCompany
    </h5>
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div>
      <div
        className="modal-body"
      >
        <div
          className="property-set form-row"
        />
      </div>
      <div
        className="col-12"
      />
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          title=""
          type="submit"
        >
          Submit
        </button>
         
        <button
          className="btn btn-secondary close-action-btn"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`SubmitOnChangeForm 1`] = `
<form
  className="submit-onchange-form"
>
  <input
    className="property-input form-control"
    id="companyIDPropertyInput"
    maxLength={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onInvalid={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    size={undefined}
    type="text"
    value=""
  />
  <div
    className="col-12"
  />
</form>
`;
